# ComfyUI-HF-Diffusers

./: README.md  __init__.py  diffusers_nodes.py  pyproject.toml  requirements.txt  transformers_nodes.py  util.py
.github/workflows/: publish.yml
workflows/: hf_glm_image.json  hf_glm_image_exploded.json  hf_longcat_image.json  hf_longcat_image_exploded.json  hf_make_ai_trash.json  hf_prompt_enhancer.json  hf_sdxl.json  hf_sdxl_exploded.json  hf_z_image_turbo.json  hf_z_image_turbo_exploded.json
