[project]
name = "hf-diffusers"
description = "A lot of custom nodes for ComfyUI are really just bindings to HuggingFace Diffusers and/or Transformers, but overly constrained to use them in very particular ways."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["diffusers~=0.36.0"]

[project.urls]
Repository = "https://github.com/Yahweasel/ComfyUI-HF-Diffusers"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Yahweasel/ComfyUI-HF-Diffusers/wiki"
"Bug Tracker" = "https://github.com/Yahweasel/ComfyUI-HF-Diffusers/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-HF-Diffusers"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

